fix task order on mobile

--- a/src/TaskAttack.css
+++ b/src/TaskAttack.css
@@ -176,6 +176,7 @@ html, body, #root, #TaskAttack {
   left: 10%;
   padding-left: 1%;
   text-align: left;
+  color: rgba(0, 0, 0, 0.5);
   z-index: -1;
 }
 
@@ -325,6 +326,9 @@ html, body, #root, #TaskAttack {
   /* .taskHourTime {
     font-size: .75em;
   } */
+  .taskHour {
+    flex-direction: column-reverse;
+  }
   .TaskCellWrapper {
     flex: unset;
     width: 100%;
